Add karma perf test

--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "deploy": "./deploy.sh",
     "_deploy": "gh-pages -d build",
     "watch": "npm run start && onchange 'src/**/*' 'docs/**/*' -- npm run start",
+    "perf": "karma start test/perf/karma.conf.js",
+    "perf:watch": "karma start test/perf/karma.conf.js --auto-watch --no-single-run",
     "test:watch": "mocha test --watch --compilers js:babel-register",
     "test": "standard && mocha test --compilers js:babel-register"
   },
@@ -34,11 +36,19 @@
     "jsdom": "^9.2.1",
     "json-loader": "^0.5.4",
     "jsonp": "^0.2.0",
-    "mocha-jsdom": "^1.1.0",
+    "karma": "^0.13.22",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-mocha": "^1.0.1",
+    "karma-mocha-reporter": "^2.0.3",
+    "karma-safari-launcher": "^1.0.0",
+    "karma-webpack": "^1.7.0",
     "mocha": "^2.4.5",
+    "mocha-jsdom": "^1.1.0",
     "object-assign": "^4.1.0",
     "onchange": "^2.0.0",
     "react": "^15.0.1",
+    "react-addons-perf": "^15.1.0",
     "react-addons-test-utils": "^15.0.1",
     "react-component-permutations": "^1.0.0-beta2",
     "react-docgen": "^2.7.0",
