--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rebass",
-  "version": "0.4.0-beta.9",
+  "version": "0.4.0-beta.10",
   "description": "React functional UI component design system",
   "author": "Brent Jackson",
   "license": "MIT",
@@ -26,7 +26,6 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.14.0",
-    "cxs": "^1.0.1",
     "enzyme": "^2.4.1",
     "gh-pages": "^0.11.0",
     "gridsys": "^1.0.0-beta.5",
@@ -55,6 +54,8 @@
   },
   "dependencies": {
     "classnames": "^2.2.3",
+    "cxs": "^3.0.0-b1",
+    "deepmerge": "^1.3.1",
     "understyle": "^1.3.0"
   },
   "keywords": [
