--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-element-to-jsx-string": "^4.1.0",
     "react-geomicons": "^2.1.0",
     "react-router": "^4.0.0-alpha.4",
+    "recompose": "^0.20.2",
     "reflexbox": "^2.2.2",
     "reline": "^1.0.0-beta.3",
     "standard": "^8.0.0",
