--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-geomicons": "^2.0.5",
     "react-router": "^3.0.2",
     "reflexbox": "^2.1.0",
+    "rrx": "^1.0.0-b1",
     "standard": "^8.6.0",
     "static-react": "^3.1.0",
     "webpack": "^2.2.1",
@@ -52,7 +53,8 @@
     "classnames": "^2.2.3",
     "cxs": "^3.0.4",
     "object-assign": "^4.1.1",
-    "react-addons-pure-render-mixin": "^15.4.2"
+    "react-addons-pure-render-mixin": "^15.4.2",
+    "respace": "^1.0.0-beta.3"
   },
   "keywords": [
     "components",
